First pass of migrating to List.of()