@@ -21,7 +21,6 @@ import static org.apache.solr.common.SolrException.ErrorCode.BAD_REQUEST;
 
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -260,7 +259,7 @@ public class CategoryRoutedAlias extends RoutedAlias {
       }
       return actionList;
     } else {
-      return Collections.emptyList();
+      return List.of();
     }
   }
 }
