@@ -174,8 +174,8 @@ public class FacetComponent extends SearchComponent {
 
     private FacetContext(List<RangeFacetRequest> allRangeFacets, List<FacetBase> allQueryFacets) {
       // avoid NPEs, set to empty list if parameters are null
-      this.allRangeFacets = allRangeFacets == null ? Collections.emptyList() : allRangeFacets;
-      this.allQueryFacets = allQueryFacets == null ? Collections.emptyList() : allQueryFacets;
+      this.allRangeFacets = allRangeFacets == null ? List.of() : allRangeFacets;
+      this.allQueryFacets = allQueryFacets == null ? List.of() : allQueryFacets;
 
       taggedRangeFacets = new HashMap<>();
       for (RangeFacetRequest rf : this.allRangeFacets) {
@@ -244,7 +244,7 @@ public class FacetComponent extends SearchComponent {
      */
     public List<RangeFacetRequest> getRangeFacetRequestsForTag(String tag) {
       List<RangeFacetRequest> list = taggedRangeFacets.get(tag);
-      return list == null ? Collections.emptyList() : list;
+      return list == null ? List.of() : list;
     }
 
     /**
@@ -254,7 +254,7 @@ public class FacetComponent extends SearchComponent {
      */
     public List<FacetBase> getQueryFacetsForTag(String tag) {
       List<FacetBase> list = taggedQueryFacets.get(tag);
-      return list == null ? Collections.emptyList() : list;
+      return list == null ? List.of() : list;
     }
   }
 
@@ -1310,8 +1310,8 @@ public class FacetComponent extends SearchComponent {
     private String key; // label in the response for the result...
     // "foo" for {!key=foo}myfield
     SolrParams localParams; // any local params for the facet
-    private List<String> tags = Collections.emptyList();
-    private List<String> excludeTags = Collections.emptyList();
+    private List<String> tags = List.of();
+    private List<String> excludeTags = List.of();
     private int threadCount = -1;
 
     public FacetBase(ResponseBuilder rb, String facetType, String facetStr) {
@@ -1343,7 +1343,7 @@ public class FacetComponent extends SearchComponent {
 
         String excludeStr = localParams.get(CommonParams.EXCLUDE);
         if (StrUtils.isNullOrEmpty(excludeStr)) {
-          this.excludeTags = Collections.emptyList();
+          this.excludeTags = List.of();
         } else {
           this.excludeTags = StrUtils.splitSmart(excludeStr, ',');
         }
