@@ -27,7 +27,6 @@ import java.lang.invoke.MethodHandles;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
 import java.util.concurrent.TimeUnit;
@@ -486,7 +485,7 @@ public class VMParamsZkACLAndCredentialsProvidersTest extends SolrTestCaseJ4 {
   public static class NoCredentialZkCredentialsInjector implements ZkCredentialsInjector {
     @Override
     public List<ZkCredential> getZkCredentials() {
-      return Collections.emptyList();
+      return List.of();
     }
   }
 
@@ -529,7 +528,7 @@ public class VMParamsZkACLAndCredentialsProvidersTest extends SolrTestCaseJ4 {
     private final List<String> systemPropsValues;
 
     public TestZkCredentialsInjector(Class<?> zkCredentialsInjectorClass) {
-      this(zkCredentialsInjectorClass, Collections.emptyList(), Collections.emptyList());
+      this(zkCredentialsInjectorClass, List.of(), List.of());
     }
 
     public TestZkCredentialsInjector(
